--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@ducanh2912/next-pwa": "^10.0.0",
     "@react-three/drei": "^9.120.8",
     "@react-three/fiber": "^8.17.12",
-    "@studio-freight/lenis": "^1.0.42",
     "glsl-random": "^0.0.5",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.19",
+    "lucide": "^0.471.0",
     "motion": "^11.17.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
